--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
 								<li class="row-fluid">
 									<span class="news-date span3">Aug, 2024</span>
-									<span class="news-content span9">Our GenAI team's recent research effort has been commercialised with <b>On-device AI Wallpaper</b> enabled on various flagship Samsung smartphones: <b>Galaxy S24, Z Flip 6 and Fold 6!</b> (<a href="https://www.youtube.com/watch?v=DzjsdYZQ7ns&t=2580s" target="_blank">Samsung Galaxy Unpacked Event</a>, <a href="https://research.samsung.com/blog/Sentimental-and-Object-Preserving-On-Device-AI-Wallpaper" target="_blank">Research Blogpost</a>, <a href="https://www.youtube.com/watch?v=zk7_8ZruGt4" target="_blank">YouTube (KR)</a>, <a href="https://www.youtube.com/watch?v=T3piLiO9MEQ" target="_blank">YouTube (EN)</a>) <font color="red">[AI Product]</font>
+									<span class="news-content span9">Our GenAI team's recent research effort has been commercialised with <b>On-device AI Wallpaper</b> enabled on various flagship Samsung smartphones: <b>Galaxy S24, Z Flip 6 and Fold 6!</b> (<a href="https://www.youtube.com/watch?v=DzjsdYZQ7ns&t=2580s" target="_blank">Samsung Galaxy Unpacked Event</a>, <a href="https://www.youtube.com/watch?v=zk7_8ZruGt4" target="_blank">YouTube (KR)</a>, <a href="https://www.youtube.com/watch?v=T3piLiO9MEQ" target="_blank">YouTube (EN)</a>) <font color="red">[AI Product]</font>
 									</span>
 								</li>
 
@@ -373,11 +373,9 @@
 										<div class="project-left span4"><a href="images/projects/ai_wallpaper/teaser.gif"><img src="images/projects/ai_wallpaper/teaser.gif"></a></div>
 										<div class="project-right span8">
 											<b>Personalised On-Device AI Wallpaper</b><br>
-											Featured at the <a href="https://www.youtube.com/watch?v=DzjsdYZQ7ns&t=2580s" target="_blank">Samsung Galaxy Unpacked Event</a> and documented in <a href="https://research.samsung.com/blog/Sentimental-and-Object-Preserving-On-Device-AI-Wallpaper" target="_blank">Technical Blogpost</a>. <a href="https://www.youtube.com/watch?v=zk7_8ZruGt4" target="_blank">YouTube Video</a> showcasing this technology exceeded 390,000 views, while <a href="https://www.youtube.com/shorts/hY7qZKx1owc" target="_blank">short-form content</a> generated 28,000+ likes, demonstrating significant market interest and technological impact.<br>
-											<!-- Showcased this innovative AI technology at the <a href="https://www.youtube.com/watch?v=DzjsdYZQ7ns&t=2580s" target="_blank">Samsung Galaxy Unpacked Event</a>, with complementary <a href="https://research.samsung.com/blog/Sentimental-and-Object-Preserving-On-Device-AI-Wallpaper" target="_blank">Research Blogpost</a> coverage. Related <a href="https://www.youtube.com/watch?v=zk7_8ZruGt4" target="_blank">YouTube (KR)</a> video achieved impressive engagement with over 390,000 views, while <a href="https://www.youtube.com/shorts/hY7qZKx1owc" target="_blank">short-form content (EN)</a> generated 28,000+ likes, demonstrating strong public interest in the technology.<br> -->
+											Featured at the <a href="https://www.youtube.com/watch?v=DzjsdYZQ7ns&t=2580s" target="_blank">Samsung Galaxy Unpacked Event</a>. Dedicated <a href="https://www.youtube.com/watch?v=zk7_8ZruGt4" target="_blank">YouTube Video</a> showcasing this specific technology exceeded 390,000 views, while <a href="https://www.youtube.com/shorts/hY7qZKx1owc" target="_blank">short-form content</a> generated 28,000+ likes, demonstrating significant market interest and technological impact.<br>
 											<i><font color="red">Galaxy S24 & S25, Z Flip6 & Fold6</font></i>
 											| <a href="https://www.youtube.com/watch?v=DzjsdYZQ7ns&t=2580s" target="_blank">Samsung Galaxy Unpacked Event</a>
-											| <a href="https://research.samsung.com/blog/Sentimental-and-Object-Preserving-On-Device-AI-Wallpaper" target="_blank">Research Blogpost</a>
 											| <a href="https://www.youtube.com/shorts/uqVSq6fTcx8" target="_blank">Shorts (KR)</a>
 											| <a href="https://www.youtube.com/shorts/hY7qZKx1owc" target="_blank">Shorts (EN)</a>
 											| <a href="https://www.youtube.com/watch?v=zk7_8ZruGt4" target="_blank">YouTube (KR)</a>
@@ -952,6 +950,8 @@
 								<div class="section" id="invited-talks">Talks</div>
 									<ul>
 										<!-- \textbf{}] [\textbf{}]  -->
+										<li><a href="https://mlcommons.org/about-us/programs/" target="_blank">[ML & Systems Rising Stars Forum]</a>[<b>9 May 2025</b>] AI at the Edge: From Training to Generation. Host: Prof. Abdulrahman Mahmoud.</li>
+
 										<li><a href="https://icml.cc/" target="_blank">[ICML 2024]</a>[<b>23 Jul 2024</b>] TinyTrain: Resource-Aware Task-Adaptive Sparse Training of DNNs at the Data-Scarce Edge [<a href="https://icml.cc/virtual/2024/poster/34234" target="_blank">Link</a>].</li>
 
 										<li><a href="https://www.percom.org/" target="_blank">[PerCom 2024]</a>[<b>12 Mar 2024</b>] UR2M: Uncertainty and Resource-Aware Event Detection on Microcontrollers. Host: Prof. Christine Julien</li>
