updated teaching and reviewer

--- a/index.html
+++ b/index.html
@@ -881,10 +881,13 @@
 										<br>&nbsp;&nbsp;&nbsp; Topic: <b>On-device training and efficient test-time adaptation</b></li>
 
 									<li>&nbsp;&bullet;&nbsp; <a>Xiao Ma</a> (Ph.D. at Singapore Management University, co-supervised by Prof. Dong Ma)
-										<br>&nbsp;&nbsp;&nbsp; Topic: <b>Efficient test-time adaptation</b></li>
+										<br>&nbsp;&nbsp;&nbsp; Topic: <b>On-demand test-time adaptation</b></li>
 
 									<li>&nbsp;&bullet;&nbsp; <a>Francesco Corti</a> (Ph.D. at the Graz University of Technology, co-supervised by Prof. Olga Saukh and Prof. Cecilia Mascolo)
 										<br>&nbsp;&nbsp;&nbsp; Topic: <b>Sample-efficient test-time adaptation</b></li>
+
+									<li>&nbsp;&bullet;&nbsp; <a>Sudarshan Sreeram</a> (Ph.D. at the University of Cambridge, co-supervised by Prof. Cecilia Mascolo)
+										<br>&nbsp;&nbsp;&nbsp; Topic: <b>Efficient and reliable inference and test-time adaptation on edge devices</b></li>
 								</ul>
 								<br>
 
@@ -1069,7 +1072,7 @@
 								<ul class="news">
 									<li class="row-fluid">
 										<div class="news-date span3">2025</div>
-										<div class="news-content span9"><a href="https://icml.cc/", target="_blank">ICML</a>
+										<div class="news-content span9"><a href="https://icml.cc/", target="_blank">ICML</a>, <a href="https://www.ijcai.org/", target="_blank">IJCAI</a>
 										</div>
 									</li>
 
