edited email address

--- a/log.html
+++ b/log.html
@@ -92,7 +92,7 @@
                         <!--</p>-->
                         <div class="logo-wrapper">
                             <a href="index.html#want-to-meet">Want to Meet?</a><br>
-                            <b>Contact:</b> ydk21&lt;at&gt;cam.ac.uk<br>
+                            <b>Contact:</b> youngkwon311&lt;at&gt;gmail.com<br><br>
                             <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">
                                 <img src="images/samsung_research_logo.png" width="100px">
                             </a><br><br>
