--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 						<div class="logo-wrapper">
 							<a href="index.html#want-to-meet">Want to Meet?</a><br>
-							<b>Contact:</b> ydk21&lt;at&gt;cam.ac.uk<br><br>
+							<b>Contact:</b> youngkwon311&lt;at&gt;gmail.com<br><br>
 							<a href="https://research.samsung.com/aicenter_cambridge" target="_blank">
 								<img src="images/samsung_research_logo.png" width="100px">
 							</a><br><br>
@@ -149,7 +149,7 @@
 							<div class="span6">
 								<h3 id="contact-info">Contact Info</h3>
 								<small>
-								<a href="mailto:ydk21@cam.ac.uk">ydk21&lt;at&gt;cam.ac.uk</a><br />
+								<a href="mailto:youngkwon311@gmail.com">youngkwon311&lt;at&gt;gmail.com</a><br />
 								<a href="https://scholar.google.com/citations?hl=en&user=_rp_S9MAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">Google Scholar</a><br />
 								<a href="https://github.com/theyoungkwon" target="_blank">GitHub</a><br />
 								<a href="https://www.linkedin.com/in/theyoungkwon/" target="_blank">LinkedIn</a><br />
