--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 										<div class="project-right span8">
 											<b>Personalised On-Device AI Wallpaper</b><br>
 											Featured at the <a href="https://www.youtube.com/watch?v=DzjsdYZQ7ns&t=2580s" target="_blank">Samsung Galaxy Unpacked Event</a>. Dedicated <a href="https://www.youtube.com/watch?v=zk7_8ZruGt4" target="_blank">YouTube Video</a> showcasing this specific technology exceeded 390,000 views, while <a href="https://www.youtube.com/shorts/hY7qZKx1owc" target="_blank">short-form content</a> generated 28,000+ likes, demonstrating significant market interest and technological impact.<br>
-											<i><font color="red">Galaxy S24 & S25, Z Flip6 & Fold6</font></i>
+											<i><font color="red">Galaxy S24 & S25, Z Flip6 & Fold6 & Flip7 & Fold7</font></i>
 											| <a href="https://www.youtube.com/watch?v=DzjsdYZQ7ns&t=2580s" target="_blank">Samsung Galaxy Unpacked Event</a>
 											| <a href="https://www.youtube.com/shorts/uqVSq6fTcx8" target="_blank">Shorts (KR)</a>
 											| <a href="https://www.youtube.com/shorts/hY7qZKx1owc" target="_blank">Shorts (EN)</a>
@@ -388,7 +388,7 @@
 										<div class="project-right span8">
 											<b>Efficient On-Device Super Resolution</b><br>
 											Enabled an extremely efficient on-device super-resolution, delivering superior image quality enhancement while significantly reducing computational requirements. This technology was successfully commercialised on Samsung's flagship Galaxy S25 smartphone and featured in official <a href="https://www.youtube.com/watch?v=KNnVPUaGMeQ" target="_blank">Samsung promotional materials</a>.<br>
-											<i><font color="red">Galaxy S25</font></i>
+											<i><font color="red">Galaxy S25 Series</font></i>
 											| <a href="https://www.youtube.com/watch?v=KNnVPUaGMeQ" target="_blank">YouTube</a>
 										</div>
 									</div>
