added the hierarchicalprune paper

--- a/index.html
+++ b/index.html
@@ -410,6 +410,18 @@
 											<i><font color="red">arXiv 2025</font></i>
 										</p></li> -->
 
+									<div id="preprints-hierarchicalprune" class="project-entry">
+										<div class="project-left span4"><a href="images/projects/hierarchicalprune/teaser.png"><img src="images/projects/hierarchicalprune/teaser.png"></a></div>
+										<div class="project-right span8">
+											<b>HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models</b><br>
+											<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon*</u></font>, Rui Li*, Sijia Li, Da Li, Sourav Bhattacharya, and Stylianos Venieris</font><br>
+											<i><font color="red">arXiv 2025</font></i>
+											| <a href="papers/articles/kwon_hierarchicalprune_2025.pdf" target="_blank">PDF</a>
+											| <a href="https://arxiv.org/abs/2508.04663v1" target="_blank">Link</a>
+											| * Co-first authors
+										</div>
+									</div>
+
 									<div id="preprints-odtta" class="project-entry">
 										<div class="project-left span4"><a href="images/projects/odtta/teaser.png"><img src="images/projects/odtta/teaser.png"></a></div>
 										<div class="project-right span8">
