--- a/research.html
+++ b/research.html
@@ -152,6 +152,17 @@
 								<div class="section">Preprints</div>
 								<ul>
 
+									<li id="preprints-hierarchicalprune">
+									<p>
+										<b>HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models</b><br>
+										<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon*</u></font>, Rui Li*, Sijia Li, Da Li, Sourav Bhattacharya, and Stylianos Venieris</font><br>
+										<i><font color="red">arXiv 2025</font></i>
+										| <a href="papers/articles/kwon_hierarchicalprune_2025.pdf" target="_blank">PDF</a>
+										| <a href="https://arxiv.org/abs/2508.04663v1" target="_blank">Link</a>
+										| * Co-first authors
+
+									</p></li>
+
 									<li id="preprints-odtta">
 									<p>
 										<b>On-demand Test-time Adaptation for Edgge Devices</b><br>
