Added sensys tpc and mobisys publicity chair news

--- a/index.html
+++ b/index.html
@@ -185,6 +185,18 @@
 							<ul class="news">
 
 								<li class="row-fluid">
+									<span class="news-date span3">Jul, 2025</span>
+									<span class="news-content span9">I have been invited to serve as <a href="https://www.sigmobile.org/mobisys/2026/organizing_committee/" target="_blank">MobiSys 2026 Publicity Chairs</a> <font color="red">[Service]</font>
+									</span>
+								</li>
+
+								<li class="row-fluid">
+									<span class="news-date span3">Jun, 2025</span>
+									<span class="news-content span9">I have been invited to serve as <a href="https://sensys.acm.org/2026/tpc_committee.html" target="_blank">SenSys 2026 TPC</a> <font color="red">[Service]</font>
+									</span>
+								</li>
+
+								<li class="row-fluid">
 									<span class="news-date span3">May, 2025</span>
 									<span class="news-content span9">I have been recognised as an <a href="https://mlcommons.org/about-us/programs/" target="_blank">ML and Systems Rising Star</a> by MLCommons! See you all in San Francisco! <font color="red">[Honours/Awards]</font>
 									</span>
@@ -1058,6 +1070,11 @@
 
 								<p><b>Committee</b></p>
 								<ul class="news">
+
+									<li class="row-fluid">
+										<div class="news-date span3">2025</div>
+										<div class="news-content span9"><a href="https://sensys.acm.org/2026/tpc_committee.html", target="_blank">SenSys 2026 TPC</a>, <a href="https://www.sigmobile.org/mobisys/2026/organizing_committee/", target="_blank">MobiSys 2026 Publicity Chairs</a></div>
+									</li>
 
 									<li class="row-fluid">
 										<div class="news-date span3">2024</div>
