--- a/log.html
+++ b/log.html
@@ -123,6 +123,36 @@
                             <ul class="news">
 
                                 <li class="row-fluid">
+									<span class="news-date span3">Jul, 2025</span>
+									<span class="news-content span9">I have been invited to serve as <a href="https://www.sigmobile.org/mobisys/2026/organizing_committee/" target="_blank">MobiSys 2026 Publicity Chairs</a> <font color="red">[Service]</font>
+									</span>
+								</li>
+
+								<li class="row-fluid">
+									<span class="news-date span3">Jun, 2025</span>
+									<span class="news-content span9">I have been invited to serve as <a href="https://sensys.acm.org/2026/tpc_committee.html" target="_blank">SenSys 2026 TPC</a> <font color="red">[Service]</font>
+									</span>
+								</li>
+
+								<li class="row-fluid">
+									<span class="news-date span3">May, 2025</span>
+									<span class="news-content span9">I have been recognised as an <a href="https://mlcommons.org/about-us/programs/" target="_blank">ML and Systems Rising Star</a> by MLCommons! See you all in San Francisco! <font color="red">[Honours/Awards]</font>
+									</span>
+								</li>
+
+								<li class="row-fluid">
+									<span class="news-date span3">Feb, 2025</span>
+									<span class="news-content span9">Our GenAI team's another successful commercialisation, <b>On-device Super-Resolution</b>, has been enabled on the latest flagship Samsung smartphones: <b>Galaxy S25, S25+, and S25 Ultra!</b> (<a href="https://www.youtube.com/watch?v=KNnVPUaGMeQ" target="_blank">YouTube</a>) <font color="red">[AI Product]</font>
+									</span>
+								</li>
+
+								<li class="row-fluid">
+									<span class="news-date span3">Jan, 2025</span>
+									<span class="news-content span9"><b>On-device AI Wallpaper</b> has been enabled on the latest flagship Samsung smartphones: <b>Galaxy S25, S25+, and S25 Ultra!</b> <font color="red">[AI Product]</font>
+									</span>
+								</li>
+
+                                <li class="row-fluid">
                                     <span class="news-date span3">Sep, 2024</span>
                                     <span class="news-content span9">Our paper <a href="" target="_blank">"TinyTTA: Efficient Test-time Adaptation via Early-exit Ensembles on Edge Devices"</a> is accepted by NeurIPS 2024 <font color="red">[Paper]</font></span>
                                 </li>
