updated news about hierarchicalprune

--- a/index.html
+++ b/index.html
@@ -185,6 +185,11 @@
 							<ul class="news">
 
 								<li class="row-fluid">
+									<span class="news-date span3">Aug, 2025</span>
+									<span class="news-content span9">Our paper <a href="papers/articles/kwon_hierarchicalprune_2025.pdf" target="_blank">"HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models"</a> is now on arXiv <font color="red">[Preprint]</font></span>
+								</li>
+
+								<li class="row-fluid">
 									<span class="news-date span3">Jul, 2025</span>
 									<span class="news-content span9">I have been invited to serve as <a href="https://www.sigmobile.org/mobisys/2026/organizing_committee/" target="_blank">MobiSys 2026 Publicity Chairs</a> <font color="red">[Service]</font>
 									</span>
