added phd 2nd year report

--- a/research.html
+++ b/research.html
@@ -520,6 +520,15 @@
 										| <a href="papers/bibs/kwon_tinytrain_sensys23.bib" target="_blank">BibTex</a>
 									</p></li>
 
+									<li id="report-phd-2nd-year">
+									<p>
+										<b>Efficient Continual and On-device Learning in Mobile Computing</b><br>
+										<font color="#000000"><u>Young D. Kwon</u></font><br>
+										<i><font color="red">University of Cambridge Ph.D. Second Year Report</font>, Jun 2022</i>
+										| <a href="papers/articles/kwon_phd_2ndyearreport22.pdf" target="_blank">PDF</a>
+										| <a href="papers/bibs/kwon_phd_2ndyearreport22.bib" target="_blank">BibTex</a>
+									</p></li>
+
 									<li id="report-phd-forum-sec21">
 									<p>
 										<b>Efficient Meta Continual Learning on the Edge</b><br>
