--- a/index.html
+++ b/index.html
@@ -185,6 +185,11 @@
 							<ul class="news">
 
 								<li class="row-fluid">
+									<span class="news-date span3">Oct, 2025</span>
+									<span class="news-content span9">Our paper <a href="papers/articles/kwon_mobilepicasso_2025.pdf" target="_blank">"Efficient High-Resolution Image Editing with Hallucination-Aware Loss and Adaptive Tiling"</a> is now on arXiv <font color="red">[Preprint]</font></span>
+								</li>
+
+								<li class="row-fluid">
 									<span class="news-date span3">Aug, 2025</span>
 									<span class="news-content span9">Our paper <a href="papers/articles/kwon_hierarchicalprune_2025.pdf" target="_blank">"HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models"</a> is now on arXiv <font color="red">[Preprint]</font></span>
 								</li>
@@ -420,12 +425,17 @@
 						<div class="row-fluid">
 							<div class="span12">
 								<div class="section">Preprints</div>
-									<!-- <li id="preprints-mobilepicasso">
-										<p>
-											<b>MobilePicasso: On-Device High-Resolution Image Editing with Hallucination-Aware Loss and Adaptive Context-Preserving Tiling</b><br>
+
+									<div id="preprints-mobilepicasso" class="project-entry">
+										<div class="project-left span4"><a href="images/projects/mobilepicasso/teaser.png"><img src="images/projects/mobilepicasso/teaser.png"></a></div>
+										<div class="project-right span8">
+											<b>Efficient High-Resolution Image Editing with Hallucination-Aware Loss and Adaptive Tiling</b><br>
 											<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Abhinav Mehrotra, Malcolm Chadwick, Albert Gil Ramos, and Sourav Bhattacharya</font><br>
 											<i><font color="red">arXiv 2025</font></i>
-										</p></li> -->
+											| <a href="papers/articles/kwon_mobilepicasso_2025.pdf" target="_blank">PDF</a>
+											| <a href="https://arxiv.org/abs/2510.06295" target="_blank">Link</a>
+										</div>
+									</div>
 
 									<div id="preprints-hierarchicalprune" class="project-entry">
 										<div class="project-left span4"><a href="images/projects/hierarchicalprune/teaser.png"><img src="images/projects/hierarchicalprune/teaser.png"></a></div>
