--- a/research.html
+++ b/research.html
@@ -152,6 +152,15 @@
 								<div class="section">Preprints</div>
 								<ul>
 
+									<li id="preprints-mobilepicasso">
+									<p>
+										<b>Efficient High-Resolution Image Editing with Hallucination-Aware Loss and Adaptive Tiling</b><br>
+										<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Abhinav Mehrotra, Malcolm Chadwick, Albert Gil Ramos, and Sourav Bhattacharya</font><br>
+										<i><font color="red">arXiv 2025</font></i>
+										| <a href="papers/articles/kwon_mobilepicasso_2025.pdf" target="_blank">PDF</a>
+										| <a href="https://arxiv.org/abs/2510.06295" target="_blank">Link</a>
+									</p></li>
+
 									<li id="preprints-hierarchicalprune">
 									<p>
 										<b>HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models</b><br>
@@ -160,7 +169,6 @@
 										| <a href="papers/articles/kwon_hierarchicalprune_2025.pdf" target="_blank">PDF</a>
 										| <a href="https://arxiv.org/abs/2508.04663v1" target="_blank">Link</a>
 										| * Co-first authors
-
 									</p></li>
 
 									<li id="preprints-odtta">
