--- a/index.html
+++ b/index.html
@@ -112,22 +112,22 @@
 						<!--About-->
 						<div class="row-fluid bio" id="About">
 							<p>
-								I am a Research Scientist at <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI Center-Cambridge</a> working with <a href="https://steliosven10.github.io/" target="_blank">Dr Stylianos I. Venieris</a> and <a href="https://scholar.google.co.uk/citations?user=EU-ESvsAAAAJ&hl=en" target="_blank">Dr Sourav Bhattacharya</a>.
-								Prior to that, I have obtained a PhD from the <a href="https://www.cam.ac.uk/" target="_blank">University of Cambridge</a> under <a href="https://www.cl.cam.ac.uk/~cm542/" target="_blank">Prof. Cecilia Mascolo</a>. My research bridges machine learning and systems through innovative on-device AI processing techniques, <b>successfully commercialising breakthrough technologies like on-device diffusion models</b> for various flagship Samsung smartphones (Galaxy S24, S25, Z Flip6 & Fold6) that impact millions of users.
+								I am a Research Scientist at <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI Center-Cambridge</a> working with <a href="https://steliosven10.github.io/" target="_blank">Dr Stylianos I. Venieris</a>.
+								Prior to that, I have obtained a PhD from the <a href="https://www.cam.ac.uk/" target="_blank">University of Cambridge</a> under <a href="https://www.cl.cam.ac.uk/~cm542/" target="_blank">Prof. Cecilia Mascolo</a>. My research bridges machine learning and systems through innovative on-device AI processing techniques, successfully <b>commercialising breakthrough technologies</b> like on-device diffusion models for various flagship Samsung smartphones (Galaxy S24, S25, Z Flip6 & Fold6, Z Flip7 & Fold7) that <b>impact millions of users</b>.
 							</p>
 
 							<p>
-								Recently recognised as an <award><b>ML and Systems Rising Star</b></award> by MLCommons, my work has earned the <award><b>Best Paper Award at SEC '21</b></award> and <award><b>Samsung Best Paper Silver Award 2024</b></award>, with publications in <b>AI (ICML, NeurIPS)</b> and <b>Systems (SenSys, IPSN, TMC, MobiCom, and IMWUT)</b>. I develop resource-efficient solutions that make advanced AI accessible on everyday devices with strict hardware constraints.
+								Recently recognised as an <award><b>ML and Systems Rising Star</b></award> by MLCommons, my work has earned <award><b>consecutive Samsung Best Paper Silver Awards (2024, 2025)</b></award> and <award><b>Best Paper Award at SEC '21</b></award>, with publications in <b>AI (ICML, NeurIPS)</b> and <b>Systems (SenSys, IPSN, TMC, MobiCom, and IMWUT)</b>. I develop resource-efficient solutions that make advanced AI accessible on everyday devices with strict hardware constraints.
 							</p>
 
 							<p>
 								<b>Research Focus:</b>
 								<ul>
 								<li>
-									<b>On-Device Training & Continual Adaptation</b>: Enabling devices to learn locally with minimal data, preserving privacy and improving personalisation
+									<b>Efficient Generative AI Systems</b>: Reimagining resource-intensive generative models for mobile devices
 								</li>
 								<li>
-									<b>Efficient Generative AI Systems</b>: Reimagining resource-intensive generative models for mobile devices
+									<b>On-Device Training & Continual Adaptation</b>: Enabling devices to learn locally with minimal data, preserving privacy and improving personalisation
 								</li>
 								<li>
 									<b>System-Algorithm Co-Design for IoT</b>: Creating optimised solutions that synergise hardware capabilities and algorithmic innovations for resource-constrained environments
