updated bib files to txt files following google scholar approach

--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
 											| <a href="papers/articles/kwon_tinytrain_icml24.pdf" target="_blank">PDF</a>
 											| <a href="papers/poster/[Final]poster_kwon_tinytrain_icml24.pdf" target="_blank">Poster</a>
 											| <a href="papers/slides/[Final]slides_kwon_tinytrain_icml24.pdf" target="_blank">Slides</a>
-											| <a href="papers/bibs/kwon_tinytrain_icml24.bib" target="_blank">BibTex</a>
+											| <a href="papers/bibs/kwon_tinytrain_icml24.txt" target="_blank">BibTex</a>
 											| <a href="https://arxiv.org/abs/2307.09988" target="_blank">Link</a>
 											<br><award><b>Samsung Best Paper Silver Award 2024</b></award>
 										</div>
@@ -519,7 +519,7 @@
 											| <a href="papers/articles/jia_tinytta_neurips24.pdf" target="_blank">PDF</a>
 											| <a href="papers/poster/poster_jia_tinytta_neurips24.png" target="_blank">Poster</a>
 											| <a href="papers/slides/slides_jia_tinytta_neurips24.pdf" target="_blank">Slides</a>
-											| <a href="papers/bibs/jia_tinytta_neurips24.bib" target="_blank">BibTex</a>
+											| <a href="papers/bibs/jia_tinytta_neurips24.txt" target="_blank">BibTex</a>
 											| <a href="https://neurips.cc/virtual/2024/poster/94778" target="_blank">Link</a>
 											| <a href="https://github.com/h-jia/TTE" target="_blank">Code</a>
 										</div>
@@ -532,7 +532,7 @@
 											<font color="#aaaaaa">Hong Jia, <font color="#000000"><u>Young D. Kwon</u></font>, Dong Ma, Nhat Pham, Lorena Qendro, Tam Vu, and Cecilia Mascolo</font><br>
 											<i><font color="red">PerCom 2024</font></i>
 											| <a href="papers/articles/jia_ur2m_percom24.pdf" target="_blank">PDF</a>
-											| <a href="papers/bibs/jia_ur2m_percom24.bib" target="_blank">BibTex</a>
+											| <a href="papers/bibs/jia_ur2m_percom24.txt" target="_blank">BibTex</a>
 											<br><award><b>Oral Presentation, Full Paper Acceptance Rate: 14.5%</b></award>
 										</div>
 									</div>
@@ -544,7 +544,7 @@
 											<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Jagmohan Chauhan, Hong Jia, and Stylianos I. Venieris, and Cecilia Mascolo</font><br>
 											<i><font color="red">SenSys 2023</font></i>
 											| <a href="papers/articles/kwon_lifelearner_sensys23.pdf" target="_blank">PDF</a>
-											| <a href="papers/bibs/kwon_lifelearner_sensys23.bib" target="_blank">BibTex</a>
+											| <a href="papers/bibs/kwon_lifelearner_sensys23.txt" target="_blank">BibTex</a>
 											<br><award><b>Oral Presentation, Full Paper Acceptance Rate: 18.9%</b></award>
 										</div>
 									</div>
@@ -556,7 +556,7 @@
 											<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Jagmohan Chauhan, and Cecilia Mascolo</font><br>
 											<i><font color="red">IPSN 2022</font></i>
 											| <a href="papers/articles/kwon_yono_ipsn22.pdf" target="_blank">PDF</a>
-											| <a href="papers/bibs/kwon_yono_ipsn22.bib" target="_blank">BibTex</a>
+											| <a href="papers/bibs/kwon_yono_ipsn22.txt" target="_blank">BibTex</a>
 											| <a href="https://ieeexplore.ieee.org/abstract/document/9826043" target="_blank">Link</a>
 										</div>
 									</div>
@@ -568,7 +568,7 @@
 											<font color="#aaaaaa">Nhat Pham, Hong Jia, Minh Tran, Tuan Dinh, Nam Bui, <font color="#000000"><u>Young D. Kwon</u></font>, Dong Ma, VP Nguyen, Cecilia Mascolo, Tam Vu</font><br>
 											<i><font color="red">MobiCom 2022</font></i>
 											| <a href="papers/articles/pham_pros_mobicom22.pdf" target="_blank">PDF</a>
-											| <a href="papers/bibs/pham_pros_mobicom22.bib" target="_blank">BibTex</a>
+											| <a href="papers/bibs/pham_pros_mobicom22.txt" target="_blank">BibTex</a>
 											| <a href="https://dl.acm.org/doi/10.1145/3495243.3560533" target="_blank">Link</a>
 											<br><award><b>Oral Presentation, Full Paper Acceptance Rate: 17.8%</b></award>
 										</div>
@@ -581,7 +581,7 @@
 											<font color="#aaaaaa">Kirill A. Shatilov, <font color="#000000"><u>Young D. Kwon</u></font>, Lik-Hang Lee, Dimitris Chatzopoulos, and Pan Hui</font><br>
 											<i><font color="red">TMC 2022</font></i>
 											| <a href="papers/articles/shatilov_myokey_tmc22.pdf" target="_blank">PDF</a>
-											| <a href="papers/bibs/shatilov_myokey_tmc22.bib" target="_blank">BibTex</a>
+											| <a href="papers/bibs/shatilov_myokey_tmc22.txt" target="_blank">BibTex</a>
 											| <a href="https://ieeexplore.ieee.org/document/9737726" target="_blank">Link</a>
 										</div>
 									</div>
@@ -593,7 +593,7 @@
 											<font color="#aaaaaa">Jagmohan Chauhan, <font color="#000000"><u>Young D. Kwon</u></font>, Pan Hui, and Cecilia Mascolo</font><br>
 											<i><font color="red">IMWUT/UbiComp 2021</font></i>
 											| <a href="papers/articles/chauhan_contauth_imwut20.pdf" target="_blank">PDF</a>
-											| <a href="papers/bibs/chauhan_contauth_imwut20.bib" target="_blank">BibTex</a>
+											| <a href="papers/bibs/chauhan_contauth_imwut20.txt" target="_blank">BibTex</a>
 											| <a href="https://dl.acm.org/doi/10.1145/3432203" target="_blank">Link</a>
 										</div>
 									</div>
@@ -605,7 +605,7 @@
 											<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Jagmohan Chauhan, and Cecilia Mascolo</font><br>
 											<i><font color="red">Interspeech 2021</font></i>
 											| <a href="papers/articles/kwon_fasticarl_interspeech21.pdf" target="_blank">PDF</a>
-											| <a href="papers/bibs/kwon_fasticarl_interspeech21.bib" target="_blank">BibTex</a>
+											| <a href="papers/bibs/kwon_fasticarl_interspeech21.txt" target="_blank">BibTex</a>
 											| <a href="https://www.isca-speech.org/archive/interspeech_2021/kwon21_interspeech.html" target="_blank">Link</a>
 										</div>
 									</div>
@@ -617,7 +617,7 @@
 											<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Jagmohan Chauhan, Abhishek Kumar, Pan Hui, and Cecilia Mascolo</font><br>
 											<i><font color="red">SEC 2021</font></i>
 											| <a href="papers/articles/kwon_exploring_sec21.pdf" target="_blank">PDF</a>
-											| <a href="papers/bibs/kwon_exploring_sec21.bib" target="_blank">BibTex</a>
+											| <a href="papers/bibs/kwon_exploring_sec21.txt" target="_blank">BibTex</a>
 											| <a href="https://arxiv.org/abs/2110.13290" target="_blank">Link</a>
 											<br><award><b>Best Paper Award</b></award> <a href="images/projects/cl-benchmark/SEC_2021_Best_Paper_Award.jpg" target="_blank">(Photo)</a>
 										</div>
