add SBPA silver to honors and award section

--- a/index.html
+++ b/index.html
@@ -717,6 +717,11 @@
 									</li>
 
 									<li class="row-fluid">
+										<div class="news-date span2">2025</div>
+										<div class="news-content span10"><award>Silver Medal</award> at Samsung Best Paper Award 2025</div>
+									</li>
+
+									<li class="row-fluid">
 										<div class="news-date span2">2024</div>
 										<div class="news-content span10"><award>Silver Medal</award> at Samsung Best Paper Award 2024</div>
 									</li>
