hierarchicalprune is accepted at aaai 2026

--- a/index.html
+++ b/index.html
@@ -185,13 +185,18 @@
 							<ul class="news">
 
 								<li class="row-fluid">
+									<span class="news-date span3">Nov, 2025</span>
+									<span class="news-content span9">Our paper <a href="papers/articles/kwon_hierarchicalprune_aaai26.pdf" target="_blank">"HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models"</a> is accepted by AAAI 2026 <font color="red">[Paper]</font></span>
+								</li>
+
+								<li class="row-fluid">
 									<span class="news-date span3">Oct, 2025</span>
 									<span class="news-content span9">Our paper <a href="papers/articles/kwon_mobilepicasso_2025.pdf" target="_blank">"Efficient High-Resolution Image Editing with Hallucination-Aware Loss and Adaptive Tiling"</a> is now on arXiv <font color="red">[Preprint]</font></span>
 								</li>
 
 								<li class="row-fluid">
 									<span class="news-date span3">Aug, 2025</span>
-									<span class="news-content span9">Our paper <a href="papers/articles/kwon_hierarchicalprune_2025.pdf" target="_blank">"HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models"</a> is now on arXiv <font color="red">[Preprint]</font></span>
+									<span class="news-content span9">Our paper <a href="papers/articles/kwon_hierarchicalprune_aaai26.pdf" target="_blank">"HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models"</a> is now on arXiv <font color="red">[Preprint]</font></span>
 								</li>
 
 								<li class="row-fluid">
@@ -437,22 +442,10 @@
 										</div>
 									</div>
 
-									<div id="preprints-hierarchicalprune" class="project-entry">
-										<div class="project-left span4"><a href="images/projects/hierarchicalprune/teaser.png"><img src="images/projects/hierarchicalprune/teaser.png"></a></div>
-										<div class="project-right span8">
-											<b>HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models</b><br>
-											<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon*</u></font>, Rui Li*, Sijia Li, Da Li, Sourav Bhattacharya, and Stylianos Venieris</font><br>
-											<i><font color="red">arXiv 2025</font></i>
-											| <a href="papers/articles/kwon_hierarchicalprune_2025.pdf" target="_blank">PDF</a>
-											| <a href="https://arxiv.org/abs/2508.04663v1" target="_blank">Link</a>
-											| * Co-first authors
-										</div>
-									</div>
-
 									<div id="preprints-odtta" class="project-entry">
 										<div class="project-left span4"><a href="images/projects/odtta/teaser.png"><img src="images/projects/odtta/teaser.png"></a></div>
 										<div class="project-right span8">
-											<b>On-demand Test-time Adaptation for Edgge Devices</b><br>
+											<b>On-demand Test-time Adaptation for Edge Devices</b><br>
 											<font color="#aaaaaa">Xiao MA, <font color="#000000"><u>Young D. Kwon</u></font>, and Dong MA</font><br>
 											<i><font color="red">arXiv 2025</font></i>
 											| <a href="papers/articles/ma_odtta_2025.pdf" target="_blank">PDF</a>
@@ -494,6 +487,19 @@
 						<div class="row-fluid">
 							<div class="span12">
 								<div class="section">Selected Publications</div>
+
+									<div id="publication-hierarchicalprune" class="project-entry">
+										<div class="project-left span4"><a href="images/projects/hierarchicalprune/teaser.png"><img src="images/projects/hierarchicalprune/teaser.png"></a></div>
+										<div class="project-right span8">
+											<b>HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models</b><br>
+											<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon*</u></font>, Rui Li*, Sijia Li, Da Li, Sourav Bhattacharya, and Stylianos Venieris</font><br>
+											<i><font color="red">AAAI 2026</font></i>
+											| <a href="papers/articles/kwon_hierarchicalprune_aaai26.pdf" target="_blank">PDF</a>
+											| <a href="https://arxiv.org/abs/2508.04663v1" target="_blank">Link</a>
+											| <a href="papers/bibs/kwon_hierarchicalprune_aaai26.txt" target="_blank">BibTex</a>
+											| * Co-first authors
+										</div>
+									</div>
 
 									<div id="publication-tinytrain" class="project-entry">
 										<div class="project-left span4"><a href="images/projects/tinytrain/teaser.png"><img src="images/projects/tinytrain/teaser.png"></a></div>
