--- a/research.html
+++ b/research.html
@@ -161,16 +161,6 @@
 										| <a href="https://arxiv.org/abs/2510.06295" target="_blank">Link</a>
 									</p></li>
 
-									<li id="preprints-hierarchicalprune">
-									<p>
-										<b>HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models</b><br>
-										<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon*</u></font>, Rui Li*, Sijia Li, Da Li, Sourav Bhattacharya, and Stylianos Venieris</font><br>
-										<i><font color="red">arXiv 2025</font></i>
-										| <a href="papers/articles/kwon_hierarchicalprune_2025.pdf" target="_blank">PDF</a>
-										| <a href="https://arxiv.org/abs/2508.04663v1" target="_blank">Link</a>
-										| * Co-first authors
-									</p></li>
-
 									<li id="preprints-odtta">
 									<p>
 										<b>On-demand Test-time Adaptation for Edgge Devices</b><br>
@@ -221,6 +211,19 @@
 							<div class="span12">
 								<div class="section">Publications</div>
 								<ul>
+
+									<div id="publication-hierarchicalprune" class="project-entry">
+										<div class="project-left span4"><a href="images/projects/hierarchicalprune/teaser.png"><img src="images/projects/hierarchicalprune/teaser.png"></a></div>
+										<div class="project-right span8">
+											<b>HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models</b><br>
+											<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon*</u></font>, Rui Li*, Sijia Li, Da Li, Sourav Bhattacharya, and Stylianos Venieris</font><br>
+											<i><font color="red">AAAI 2026</font></i>
+											| <a href="papers/articles/kwon_hierarchicalprune_aaai26.pdf" target="_blank">PDF</a>
+											| <a href="https://arxiv.org/abs/2508.04663v1" target="_blank">Link</a>
+											| <a href="papers/bibs/kwon_hierarchicalprune_aaai26.txt" target="_blank">BibTex</a>
+											| * Co-first authors
+										</div>
+									</div>
 
 									<li id="publication-tinytrain">
 									<p>
