minor update on the hierarchicalprune paper

--- a/research.html
+++ b/research.html
@@ -212,18 +212,16 @@
 								<div class="section">Publications</div>
 								<ul>
 
-									<div id="publication-hierarchicalprune" class="project-entry">
-										<div class="project-left span4"><a href="images/projects/hierarchicalprune/teaser.png"><img src="images/projects/hierarchicalprune/teaser.png"></a></div>
-										<div class="project-right span8">
-											<b>HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models</b><br>
-											<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon*</u></font>, Rui Li*, Sijia Li, Da Li, Sourav Bhattacharya, and Stylianos Venieris</font><br>
-											<i><font color="red">AAAI 2026</font></i>
-											| <a href="papers/articles/kwon_hierarchicalprune_aaai26.pdf" target="_blank">PDF</a>
-											| <a href="https://arxiv.org/abs/2508.04663v1" target="_blank">Link</a>
-											| <a href="papers/bibs/kwon_hierarchicalprune_aaai26.txt" target="_blank">BibTex</a>
-											| * Co-first authors
-										</div>
-									</div>
+									<li id="publication-hierarchicalprune">
+									<p>
+										<b>HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models</b><br>
+										<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon*</u></font>, Rui Li*, Sijia Li, Da Li, Sourav Bhattacharya, and Stylianos Venieris</font><br>
+										<i><font color="red">AAAI 2026</font></i>
+										| <a href="papers/articles/kwon_hierarchicalprune_aaai26.pdf" target="_blank">PDF</a>
+										| <a href="https://arxiv.org/abs/2508.04663v2" target="_blank">Link</a>
+										| <a href="papers/bibs/kwon_hierarchicalprune_aaai26.txt" target="_blank">BibTex</a>
+										| * Co-first authors
+									</p></li>
 
 									<li id="publication-tinytrain">
 									<p>
